--- a/source/pug/pages/escaperoom/escaperoom.pug
+++ b/source/pug/pages/escaperoom/escaperoom.pug
@@ -18,7 +18,7 @@ html(lang="ru")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="description", content="Мёд - оптом и в розницу")
+    meta(name="description", content="Escaperoom - квесты в реальности")
 
     link(rel="apple-touch-icon" sizes="180x180" href="img2/favicon/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="img2/favicon/favicon-32x32.png")
@@ -41,13 +41,13 @@ html(lang="ru")
                 li.main-navigation__item
                     a(href="escaperoom-selectQuest.html") Квесты
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Новичкам
+                    a(href="escaperoom-rookie.html") Новичкам
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Отзывы
+                    a(href="escaperoom-reviews.html") Отзывы
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Акции
+                    a(href="escaperoom-promo.html") Акции
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Контакты
+                    a(href="escaperoom-contacts.html") Контакты
             ul.user-navigation
                 li.user-navigation__item.user-navigation__item--city
                     a.jsCity(href="#") Новосибирск
