--- a/source/pug/pages/honey/honey.pug
+++ b/source/pug/pages/honey/honey.pug
@@ -52,10 +52,10 @@ html(lang="ru")
               li
                 a(href="#") Мелорин
           li.main-navigation__item
-            a.main-navigation__link(href="#")
+            a.main-navigation__link(href="honey-delivery.html")
               span Доставка и оплата
           li.main-navigation__item
-            a.main-navigation__link(href="#")
+            a.main-navigation__link(href="honey-about.html")
               span О Компании
       nav.user-navigation
         ul.user-navigation__list
