--- a/source/pug/pages/escaperoom/escaperoom-mansion.pug
+++ b/source/pug/pages/escaperoom/escaperoom-mansion.pug
@@ -41,13 +41,13 @@ html(lang="ru")
                 li.main-navigation__item
                     a(href="escaperoom-selectQuest.html") Квесты
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Новичкам
+                    a(href="escaperoom-rookie.html") Новичкам
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Отзывы
+                    a(href="escaperoom-reviews.html") Отзывы
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Акции
+                    a(href="escaperoom-promo.html") Акции
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Контакты
+                    a(href="escaperoom-contacts.html") Контакты
             ul.user-navigation
                 li.user-navigation__item.user-navigation__item--city
                     a.jsCity(href="#") Новосибирск
