--- a/source/sass/honey/general.scss
+++ b/source/sass/honey/general.scss
@@ -69,3 +69,10 @@ img {
   margin: -1px;
   font-size: 0;
 }
+
+.title {
+  font-size: 70px;
+  text-align: center;
+  color: #ffffff;
+  margin: 150px 0 0 0;
+}
