--- a/source/pug/pages/escaperoom/escaperoom-rookie.pug
+++ b/source/pug/pages/escaperoom/escaperoom-rookie.pug
@@ -30,6 +30,8 @@ html(lang="ru")
     link(rel="stylesheet", href="../css/style2.min.css")
 
   body.internal
+    a.return-btn(href="../index.html" aria-label="Вернуться на навигационную страницу") 
+      +icon('icon-home', 32, 32)  
     div(style="display:none")
         include ../../../../build/img2/sprite_auto.svg
     header.page-header.page-header--index.page-header--nojs.page-header--closed
