--- a/source/pug/pages/honey/honey-catalog.pug
+++ b/source/pug/pages/honey/honey-catalog.pug
@@ -31,6 +31,8 @@ html(lang="ru")
     link(rel="stylesheet", href="../css/style1.min.css")
 
   body
+    a.return-btn(href="../index.html" aria-label="Вернуться на навигационную страницу") 
+      +icon('icon-home', 32, 32)  
     div(style="display:none")
       include ../../../../build/img1/sprite_auto.svg
     header.page-header
