добавляет блок study

--- a/source/pug/base/header.pug
+++ b/source/pug/base/header.pug
@@ -1,11 +1,12 @@
 mixin header(headerMod, currentPage)
   header.header
     .container
-      ul.header__list      
-        li.header__item 
-          a.header__link(href="#stack") Мой стек  
-        li.header__item 
-          a.header__link(href="#projects") Проекты   
-        li.header__item 
+      ul.header__list
+        li.header__item
+          a.header__link(href="#stack") Мой стек
+        li.header__item
+          a.header__link(href="#projects") Проекты
+        li.header__item
           a.header__link(href="#contacts") Контакты
-      
+        li.header__item
+          a.header__link(href="#study") Обучение
