добавляет анимацию на главную

--- a/source/pug/base/header.pug
+++ b/source/pug/base/header.pug
@@ -1,7 +1,7 @@
 mixin header(headerMod, currentPage)
   header.header
     .container
-      ul.header__list
+      ul.header__list.anim-items.anim-no-hide
         li.header__item
           a.header__link(href="#stack") Мой стек
         li.header__item
