--- a/source/pug/pages/denim/index.pug
+++ b/source/pug/pages/denim/index.pug
@@ -22,6 +22,8 @@ html(lang="ru")
     link(rel="stylesheet", href="../css/style4.min.css")
 
   body
+    a.return-btn(href="../index.html#projects" aria-label="Вернуться на навигационную страницу")
+      +icon('icon-home', 32, 32)
     div(style="display:none")
       include ../../../../build/img4/sprite_auto.svg
     header.header.container
