--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -15,10 +15,10 @@ block main
   main
     section.intro
       .container
-        h1.intro__title Кирилл Моргунов
-        p.intro__description Фронтенд-разработчик
-        a.btn.intro__btn(href="img/CV.pdf" download) Скачать резюме
-        ul.socials
+        h1.intro__title.anim-items.anim-no-hide Кирилл Моргунов
+        p.intro__description.anim-items.anim-no-hide Фронтенд-разработчик
+        a.btn.intro__btn.anim-items.anim-no-hide(href="img/CV.pdf" download) Скачать резюме
+        ul.socials.anim-items.anim-no-hide
           li.socials__item
             a.socials__link(href="https://vk.com/id8596842" target="_blank" rel="noopener noreferrer")
               +icon('icon-vk', 31, 19)
