--- a/source/pug/pages/escaperoom/escaperoom-mansion.pug
+++ b/source/pug/pages/escaperoom/escaperoom-mansion.pug
@@ -23,7 +23,7 @@ html(lang="ru")
     link(rel="stylesheet", href="../css/style2.min.css")
 
   body.mansion
-    a.return-btn(href="../index.html" aria-label="Вернуться на навигационную страницу")
+    a.return-btn(href="../index.html#projects" aria-label="Вернуться на навигационную страницу")
       +icon('icon-home', 32, 32)
     div(style="display:none")
         include ../../../../build/img2/sprite_auto.svg
