--- a/source/pug/pages/veles/veles.pug
+++ b/source/pug/pages/veles/veles.pug
@@ -23,7 +23,7 @@ html(lang="ru")
     link(rel="stylesheet", href="../css/style3.min.css")  
 
   body
-    a.return-btn(href="../index.html" aria-label="Вернуться на навигационную страницу") 
+    a.return-btn(href="../index.html#projects" aria-label="Вернуться на навигационную страницу") 
       +icon('icon-home', 32, 32)  
     div(style="display:none")
       include ../../../../build/img3/sprite_auto.svg
