--- a/source/sass/denim/general.scss
+++ b/source/sass/denim/general.scss
@@ -65,3 +65,41 @@ img {
   outline: none;
   transition: color 0.3s ease, border 0.3s ease;
 }
+
+.return-btn {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  background-color: #ff7931;
+  border-radius: 50%;
+  top: 90px;
+  left: 35px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 30px;
+  line-height: 1;
+  z-index: 100;
+  outline: none;
+  transition: background 0.3s ease, box-shadow 0.3s ease;
+
+  svg {
+    fill: #ffffff;
+    stroke: #ffffff;
+
+    transition: fill 0.3s ease, stroke 0.3s ease;
+  }
+
+  &:hover,
+  &:focus {
+    background: #ffffff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+
+    svg {
+      fill: #ff7931;
+      stroke: #ff7931;
+    }
+  }
+}
